...
  ChatProvider() {
    _init();
  }

  void _init() {
    // Initialize dummy chat
    _chats.add(Chat(id: '1', name: 'PieHost Bot', messages: []));

    // Listen to connectivity
    Connectivity().onConnectivityChanged.listen((
      List<ConnectivityResult> results,
    ) {
      bool newConnected = results.any((r) => r != ConnectivityResult.none);
...
